可以切换网络 代码示例

--- a/settings.gradle
+++ b/settings.gradle
@@ -17,5 +17,6 @@ include ':app_wx1'
 include ':app_wx2'
 include ':app_wx3'
 include ':app_wx4'
+include ':app_wx_switch_net'
 include ':annotation_compiler'
 include ':NetworkApiData'
